Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28007

Windows: Pressing down two or more mouse buttons over a widget, moving mouse outside application, and releasing the buttons one by one, only the first released button generates release event

    XMLWordPrintable

Details

    • aeb566db73a2526e22145af17f6b5ed927eb6fbb

    Description

      Pressing down two or more mouse buttons over a widget, moving mouse outside application, and releasing the buttons one by one, only the first released button generates release event and the widget gets leave after first released button.

      This is a regression from Qt4, where all buttons generate release events and widget gets leave after last button is released.

      This is probably caused by a bug in autocapture handling.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes